# transport-performance-lab

./: .gitignore  README.md  build.sh  build_master_summary.py  clang.txt  idle_baseline.json  measure_idle_energy.py  merge.py  merge.sh  no_taps.sh  notes.txt  run.sh
asio/: CMakeLists.txt  README.md  build_release.sh
asio-standalone/: CMakeLists.txt  README.md  build_release.sh
asio-standalone/benchmarks/: CMakeLists.txt  bench_tcp.cpp
asio-standalone/results/: macro_bench_results.json  micro_16_0_0.json  micro_16_0_1.json  micro_16_0_10.json  micro_16_0_11.json  micro_16_0_12.json  micro_16_0_13.json  micro_16_0_14.json  micro_16_0_15.json  micro_16_0_2.json  micro_16_0_3.json  micro_16_0_4.json  micro_16_0_5.json  micro_16_0_6.json  micro_16_0_7.json  micro_16_0_8.json  micro_16_0_9.json  micro_1_0_0.json  micro_2_0_0.json  micro_2_0_1.json  micro_4_0_0.json  micro_4_0_1.json  micro_4_0_2.json  micro_4_0_3.json  micro_8_0_0.json  micro_8_0_1.json  micro_8_0_2.json  micro_8_0_3.json  micro_8_0_4.json  micro_8_0_5.json  micro_8_0_6.json  micro_8_0_7.json
asio-standalone/scripts/: run_bench.py
asio-standalone/tcpclient/: client.cpp
asio-standalone/tcpserver/: CMakeLists.txt  server.cpp
asio/benchmarks/: bench_tcp.cpp
asio/scripts/: run_bench.py
asio/tcpclient/: CMakeLists.txt  client.cpp
asio/tcpserver/: server.cpp
async-berkeley/: README.md  build_release.sh
async-berkeley/benchmarks/: bench_tcp.cpp
async-berkeley/scripts/: run_bench.py
async-berkeley/tcpclient/: CMakeLists.txt  client.cpp
bechmark_taps/: CMakeLists.txt  README.md  build_release.sh
bechmark_taps/benchmarks/: CMakeLists.txt  bench_tcp.cpp
bechmark_taps/results/: macro_bench_results.json  micro_16_0_0.json  micro_16_0_1.json  micro_16_0_10.json  micro_16_0_11.json  micro_16_0_12.json  micro_16_0_13.json  micro_16_0_14.json  micro_16_0_15.json  micro_16_0_2.json  micro_16_0_3.json  micro_16_0_4.json  micro_16_0_5.json  micro_16_0_6.json  micro_16_0_7.json  micro_16_0_8.json  micro_16_0_9.json  micro_1_0_0.json  micro_2_0_0.json  micro_2_0_1.json  micro_4_0_0.json  micro_4_0_1.json  micro_4_0_2.json  micro_4_0_3.json  micro_8_0_0.json  micro_8_0_1.json  micro_8_0_2.json  micro_8_0_3.json  micro_8_0_4.json  micro_8_0_5.json  micro_8_0_6.json  micro_8_0_7.json
bechmark_taps/scripts/: run_bench.py
bechmark_taps/tcpclient/: CMakeLists.txt  client.cpp
bechmark_taps/tcpserver/: CMakeLists.txt  server.cpp
becnhmark_async_berkeley/: CMakeLists.txt  README.md  build_release.sh
becnhmark_async_berkeley/benchmarks/: bench_tcp.cpp
becnhmark_async_berkeley/results/: macro_bench_results.json  micro_16_0_0.json  micro_16_0_1.json  micro_16_0_10.json  micro_16_0_11.json  micro_16_0_12.json  micro_16_0_13.json  micro_16_0_14.json  micro_16_0_15.json  micro_16_0_2.json  micro_16_0_3.json  micro_16_0_4.json  micro_16_0_5.json  micro_16_0_6.json  micro_16_0_7.json  micro_16_0_8.json  micro_16_0_9.json  micro_1_0_0.json  micro_2_0_0.json  micro_2_0_1.json  micro_4_0_0.json  micro_4_0_1.json  micro_4_0_2.json  micro_4_0_3.json  micro_8_0_0.json  micro_8_0_1.json  micro_8_0_2.json  micro_8_0_3.json  micro_8_0_4.json  micro_8_0_5.json  micro_8_0_6.json  micro_8_0_7.json
becnhmark_async_berkeley/scripts/: run_bench.py
becnhmark_async_berkeley/tcpclient/: client.cpp
becnhmark_async_berkeley/tcpserver/: CMakeLists.txt  server.cpp
benchmark_async_berkeley/: CMakeLists.txt  README.md
benchmark_taps/: CMakeLists.txt
benchmark_taps/scripts/: run_bench.py
benchmark_taps/tcpserver/: CMakeLists.txt  server.cpp
boost-asio/: CMakeLists.txt  README.md  build_release.sh
boost-asio/benchmarks/: CMakeLists.txt  bench_tcp.cpp
boost-asio/results/: macro_bench_results.json  micro_16_0_0.json  micro_16_0_1.json  micro_16_0_10.json  micro_16_0_11.json  micro_16_0_12.json  micro_16_0_13.json  micro_16_0_14.json  micro_16_0_15.json  micro_16_0_2.json  micro_16_0_3.json  micro_16_0_4.json  micro_16_0_5.json  micro_16_0_6.json  micro_16_0_7.json  micro_16_0_8.json  micro_16_0_9.json  micro_1_0_0.json  micro_2_0_0.json  micro_2_0_1.json  micro_4_0_0.json  micro_4_0_1.json  micro_4_0_2.json  micro_4_0_3.json  micro_8_0_0.json  micro_8_0_1.json  micro_8_0_2.json  micro_8_0_3.json  micro_8_0_4.json  micro_8_0_5.json  micro_8_0_6.json  micro_8_0_7.json
boost-asio/scripts/: run_bench.py
boost-asio/tcpclient/: client.cpp
boost-asio/tcpserver/: CMakeLists.txt  server.cpp
bsd-sockets/: CMakeLists.txt  README.md  build_release.sh
bsd-sockets-v/: CMakeLists.txt  build_release.sh
bsd-sockets/benchmarks/: CMakeLists.txt  bench_tcp.cpp
bsd-sockets/results/: macro_bench_results.json  micro_16_0_0.json  micro_16_0_1.json  micro_16_0_10.json  micro_16_0_11.json  micro_16_0_12.json  micro_16_0_13.json  micro_16_0_14.json  micro_16_0_15.json  micro_16_0_2.json  micro_16_0_3.json  micro_16_0_4.json  micro_16_0_5.json  micro_16_0_6.json  micro_16_0_7.json  micro_16_0_8.json  micro_16_0_9.json  micro_1_0_0.json  micro_2_0_0.json  micro_2_0_1.json  micro_4_0_0.json  micro_4_0_1.json  micro_4_0_2.json  micro_4_0_3.json  micro_8_0_0.json  micro_8_0_1.json  micro_8_0_2.json  micro_8_0_3.json  micro_8_0_4.json  micro_8_0_5.json  micro_8_0_6.json  micro_8_0_7.json
bsd-sockets/scripts/: run_bench.py
bsd-sockets/tcpclient/: CMakeLists.txt  client.cpp
bsd-sockets/tcpserver/: server.cpp
capy-corosio/: CMakeLists.txt  README.md  build_release.sh
capy-corosio/benchmarks/: bench_tcp.cpp
capy-corosio/scripts/: run_bench.py
capy-corosio/tcpclient/: client.cpp
capy-corosio/tcpserver/: server.cpp
corosio/: README.md  build_release.sh
global_results/: bechmark_taps_raw.csv  bechmark_taps_raw.json  bechmark_taps_summary.json  bsd-sockets_raw.csv  bsd-sockets_raw.json  bsd-sockets_summary.json  run_log.txt  run_manifest.json  system_info.txt
taps-asio/: CMakeLists.txt  README.md  build_release.sh
taps-asio/benchmarks/: CMakeLists.txt  bench_tcp.cpp
taps-asio/scripts/: run_bench.py
taps-asio/tcpclient/: CMakeLists.txt  client.cpp
taps-asio/tcpserver/: CMakeLists.txt  server.cpp
(+13 files in other folders)
